# dhall-th-example

./: .gitignore  cabal.project  mktemp  test-from-sdist.sh
silly/: dhall-th.cabal
silly/src/: MyLib.hs  MyType.dhall
