cabal-version:      2.4
name:               dhall-th
version:            0.1.0.0
author:             Bradley Saul
maintainer:         bsaul@novisci.com

extra-source-files: 
    src/MyType.dhall

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
          base ^>=4.16.3.0
        , dhall >= 1.41.1
    hs-source-dirs:   src
    default-language: Haskell2010
